--- a/app/src/main/res/layout/activity_add_bookmark.xml
+++ b/app/src/main/res/layout/activity_add_bookmark.xml
@@ -21,32 +21,75 @@
             android:id="@+id/listView_display"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:layout_weight=".1" />
+            android:layout_weight=".5" />
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight=".95"
+            android:layout_weight=".5"
             android:padding="0dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="URL:"
-                android:id="@+id/textView_URL"
-                android:layout_gravity="bottom|center_vertical"
-                android:layout_weight=".9" />
+            <EditText
+                android:layout_width="match_parent"
+                android:inputType="textPersonName"
+                android:text="Name"
+                android:ems="10"
+                android:layout_weight=".9"
+                android:id="@+id/editText_name"
+                android:layout_height="20dp" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:text="Edit"
-                android:id="@+id/button_edit"
-                android:layout_weight=".05"
-                android:layout_gravity="center_vertical|bottom"
-                android:onClick="addBookmark" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:inputType="textPersonName"
+                android:text="URL:"
+                android:ems="10"
+                android:layout_weight=".9"
+                android:id="@+id/editText_URL" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:ems="10"
+                android:id="@+id/editText_Desc"
+                android:layout_weight=".9"
+                android:text="Description:"
+                android:textSize="14sp" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:text="Save"
+                    android:id="@+id/button_edit"
+                    android:layout_weight="1"
+                    android:layout_gravity="center_vertical|bottom"
+                    android:onClick="addBookmark"
+                    android:backgroundTint="@android:color/holo_blue_bright" />
+
+                <Button
+                    android:text="Delete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:id="@+id/button_del"
+                    android:layout_weight="1"
+                    android:backgroundTint="@android:color/holo_red_dark"
+                    android:textColor="@android:color/background_light" />
+
+                <Button
+                    android:text="Done"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:id="@+id/button_Done"
+                    android:layout_weight="1" />
+            </LinearLayout>
+
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
