--- a/app/src/main/res/layout/editList_layout.xml
+++ b/app/src/main/res/layout/editList_layout.xml
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight=".2"
-            android:id="@+id/@+id/textView_URL"
+            android:id="@+id/textView_URL"
             android:paddingLeft="10dp"
             android:paddingRight="10dp" />
 
